--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,8 +25,7 @@
         android:orientation="horizontal"
         android:background="@drawable/header_shadow"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="25dp">
 
     </FrameLayout>
 
