Added and appropriately displaying the list of Committee members

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,9 @@
     <!-- Custom screen margins -->
     <dimen name="a_m_v_margin">0dp</dimen>
     <dimen name="a_m_h_margin">0dp</dimen>
+    <dimen name="a_c_t_margin">0dp</dimen>
+    <dimen name="a_c_b_margin">16dp</dimen>
+    <dimen name="a_c_h_margin">8dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
