--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,7 +24,7 @@
 
     <group
         android:id="@+id/menu_mid"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_committee"
             android:icon="@drawable/ic_placeholder"
@@ -37,7 +37,7 @@
 
     <group
         android:id="@+id/menu_about"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_placeholder"
