Starting on the timetable display, decided to change work focus to countdown to the event

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,14 @@
         android:layout_height="match_parent"
         android:background="@color/col_bg"
         android:layout_gravity="center_horizontal">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Timetable"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:onClick="goTimetable"/>
     </LinearLayout>
 
 </LinearLayout>
