--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,6 +9,28 @@
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark">
+              android:theme="@style/ThemeOverlay.AppCompat.Dark"
+              android:weightSum="1">
 
+    <ImageView
+        android:contentDescription="@string/desc_header"
+        android:layout_width="210dp"
+        android:layout_height="0dp"
+        android:id="@+id/nav_header"
+        android:src="@mipmap/ic_nav_header"
+        android:layout_weight="0.77"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/nav_header_title"
+        android:id="@+id/textView"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/nav_header_email"
+        android:id="@+id/textView2"/>
 </LinearLayout>
