--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,10 @@
     <color name="col_bg">#dddddd</color>
     <color name="col_shad">#555555</color>
 
+    <!-- Timer Colors -->
+    <color name="filler">#cccccc</color>
+    <color name="numbers">#aaaaaa</color>
+
     <!-- Text Colors -->
     <color name="textLight">#aaaaaa</color>
     <color name="textMid">#777777</color>
