--- a/app/src/main/res/layout/content_committee.xml
+++ b/app/src/main/res/layout/content_committee.xml
@@ -121,7 +121,7 @@
                     android:id="@+id/VD_j"
                     android:layout_row="3"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -159,7 +159,7 @@
                     android:layout_row="6"
                     android:layout_column="1"
                     android:text="Small Text"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -197,7 +197,7 @@
                     android:id="@+id/TR_j"
                     android:layout_row="9"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -235,7 +235,7 @@
                     android:id="@+id/SO_j"
                     android:layout_row="12"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -300,7 +300,7 @@
                     android:id="@+id/PR_j"
                     android:layout_row="15"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -329,7 +329,7 @@
                     android:id="@+id/APR_j"
                     android:layout_row="18"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -358,7 +358,7 @@
                     android:id="@+id/PO_j"
                     android:layout_row="21"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -387,7 +387,7 @@
                     android:id="@+id/HS_j"
                     android:layout_row="24"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -425,7 +425,7 @@
                     android:id="@+id/SCO_j"
                     android:layout_row="27"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -472,7 +472,7 @@
                     android:id="@+id/CGO_j"
                     android:layout_row="30"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -501,7 +501,7 @@
                     android:id="@+id/CO_j"
                     android:layout_row="33"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -539,7 +539,7 @@
                     android:id="@+id/RPG_j"
                     android:layout_row="36"
                     android:layout_column="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:layout_width="wrap_content"
