--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/timer_blank"
+                android:text=" "
                 android:id="@+id/textView6"/>
 
             <LinearLayout
@@ -135,7 +135,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/timer_blank"
+                android:text=" "
                 android:id="@+id/textView9"/>
 
             <LinearLayout
@@ -182,7 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/timer_blank"
+                android:text=" "
                 android:id="@+id/textView3"/>
 
             <LinearLayout
@@ -229,7 +229,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/timer_blank"
+                android:text=" "
                 android:id="@+id/textView8"/>
 
             <LinearLayout
