--- a/app/src/main/res/layout/content_blank.xml
+++ b/app/src/main/res/layout/content_blank.xml
@@ -29,10 +29,14 @@
 
     </FrameLayout>
 
-    <ListView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/blankList"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/col_bg">
+
+    </LinearLayout>
+
 
 </LinearLayout>
