--- a/app/src/main/res/layout/content_timetable.xml
+++ b/app/src/main/res/layout/content_timetable.xml
@@ -10,9 +10,9 @@
     android:paddingRight="@dimen/a_m_h_margin"
     android:paddingTop="@dimen/a_m_v_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="info.brocon.bca.activities.Committee"
-    android:orientation="vertical"
-    tools:showIn="@layout/app_bar_committee">
+    tools:context="info.brocon.bca.activities.Timetable"
+    tools:showIn="@layout/app_bar_timetable"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -33,33 +33,19 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="@dimen/a_c_h_margin"
-        android:paddingLeft="@dimen/a_c_h_margin"
-        android:paddingBottom="@dimen/a_c_b_margin"
+        android:layout_gravity="center_horizontal"
         android:paddingTop="@dimen/a_c_t_margin"
-        android:background="@color/col_bg"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/com_msg"
-            android:textSize="18sp"
-            android:id="@+id/comm_intro_msg"
-            android:gravity="center_horizontal"/>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:id="@+id/comm_sep"
-            android:src="@color/col_separator"/>
+        android:paddingBottom="@dimen/a_c_b_margin"
+        android:paddingLeft="@dimen/a_c_h_margin"
+        android:paddingRight="@dimen/a_c_h_margin"
+        android:background="@color/col_bg">
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/comm_list"
+            android:id="@+id/ttable_list"
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
+
 
 </LinearLayout>
