Timetable added and fully implemented

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_placeholder"
             android:title="@string/menu_timetable"/>
         <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_placeholder"
+            android:title="@string/menu_map"/>
+        <item
             android:id="@+id/nav_guests"
             android:icon="@drawable/ic_placeholder"
             android:title="@string/menu_guests"/>
