--- a/app/src/main/res/layout/listview_timetable_row.xml
+++ b/app/src/main/res/layout/listview_timetable_row.xml
@@ -21,13 +21,14 @@
         android:layout_row="1"
         android:layout_column="0"/>
 
-    <CheckBox
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remind me"
-        android:id="@+id/tt_check"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/tt_loc"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_gravity="right"
-        android:layout_rowSpan="2"/>
+        android:layout_gravity="end"/>
+
 </GridLayout>
