--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,34 +3,52 @@
               android:layout_width="match_parent"
               android:layout_height="@dimen/nav_header_height"
               android:background="@drawable/side_nav_bar"
-              android:gravity="bottom"
               android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="0dp"
+              android:paddingLeft="0dp"
+              android:paddingRight="0dp"
+              android:paddingTop="-10dp"
               android:theme="@style/ThemeOverlay.AppCompat.Dark"
               android:weightSum="1">
 
-    <ImageView
-        android:contentDescription="@string/desc_header"
-        android:layout_width="210dp"
-        android:layout_height="0dp"
-        android:id="@+id/nav_header"
-        android:src="@mipmap/ic_nav_header"
-        android:layout_weight="0.77"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/nav_header_height_2"
+        android:gravity="top"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/nav_header_title"
-        android:id="@+id/textView"/>
+        <ImageView
+            android:contentDescription="@string/desc_header"
+            android:layout_width="210dp"
+            android:layout_height="0dp"
+            android:id="@+id/nav_header"
+            android:src="@mipmap/ic_nav_header"
+            android:layout_weight="0.77"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/nav_header_email"
-        android:id="@+id/textView2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/nav_header_title"
+            android:id="@+id/textView"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/nav_header_email"
+            android:id="@+id/textView2"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/colorAccent">
+    </LinearLayout>
+
 </LinearLayout>
