--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#24077B</color>
-    <color name="colorPrimaryDark">#1a0559</color>
+    <color name="colorPrimary">#68075B</color>
+    <color name="colorPrimaryMid">#58064d</color>
+    <color name="colorPrimaryDark">#4C0543</color>
     <color name="colorAccent">#e5b169</color>
 
     <!-- Colors -->
@@ -17,4 +18,5 @@
     <color name="textLight">#aaaaaa</color>
     <color name="textMid">#777777</color>
     <color name="textDark">#444444</color>
+    <color name="textBlack">#000000</color>
 </resources>
