--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">125dp</dimen>
+    <dimen name="nav_header_height">128dp</dimen>
+    <dimen name="nav_header_height_2">125dp</dimen>
 
     <!-- Custom nav_bar settings -->
     <dimen name="nav_width">270dp</dimen>
